--- a/css/style.css
+++ b/css/style.css
@@ -557,7 +557,7 @@ img,video{
     background-image:url(https://www.superrocksnft.com/static/media/roadmap.2c60c13c.png)
 }
 .bg-circles{
-    background-image:url(https://www.superrocksnft.com/static/media/circles.1115f337.png)
+    background-image:url(https://www.dudesclubnft.xyz/images/circles.png)
 }
 .bg-mountain{
     background-image:url()
