--- a/css/style.css
+++ b/css/style.css
@@ -554,10 +554,10 @@ img,video{
     background-image:url(../images/banner.png)
 }
 .bg-roadmap-image{
-    background-image:url(https://www.superrocksnft.com/static/media/roadmap.2c60c13c.png)
+    background-image:url(../images/roadmap.png)
 }
 .bg-circles{
-    background-image:url(https://www.dudesclubnft.xyz/images/circles.png)
+    background-image:url(../images/circles.png)
 }
 .bg-mountain{
     background-image:url()
